--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,47 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+/* -------------------Games-------------------- */
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 33.33%;
+  padding: 0px;
+}
+
+.item {
+  width: 100%;
+  height: 100%;
+}
+
+/* ------------------More Games---------------- */
+.space {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.button {
+  background-color: #e7e7e7;
+  color: black;
+  border: none;
+  width: 100%;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Times New Roman', Times, serif;
+  display: inline-block;
+  margin: 4px 2px;
+  font-size: 22px;
+}
+/* --------------------News-------------------- */
+
+
+
+
+
+
+
+
+
