--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,13 +3,23 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+/* -------------------Carousel-------------------- */
+
+@media screen and (max-width: 500px) {
+  .CarouselResponsive {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+
 /* -------------------Games-------------------- */
 .row {
   display: flex;
 }
 
-.column {
-  flex: 33.33%;
+.GameImg {
+  float: left;
   padding: 0px;
 }
 
@@ -18,27 +28,128 @@ body {
   height: 100%;
 }
 
+@media screen and (max-width: 500px) {
+  .GameImagesResponsive {
+    width: 100%;
+    padding-top: 5px;
+  }
+}
+
 /* ------------------More Games---------------- */
 .space {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .button {
   background-color: #e7e7e7;
   color: black;
   border: none;
-  width: 100%;
-  padding: 15px 32px;
+  width: 25%;
+  padding-top: 15px;
+  padding-bottom: 15px;
   text-align: center;
   text-decoration: none;
   font-family: 'Times New Roman', Times, serif;
   display: inline-block;
-  margin: 4px 2px;
   font-size: 22px;
+}
+
+@media screen and (max-width: 500px) {
+  .ButtonResponsive {
+    width: 100%;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .columnResponsive {
+   padding-top: 10px;
+  }
 }
 /* --------------------News-------------------- */
 
+.newsBackground {
+  background-color: #e7e7e7;
+  width: auto;
+  height: 100%;
+}
+
+.column2 {
+  float: left;
+  flex: 33.33%;
+  padding: 5px;
+}
+
+.newsImages {
+  width: 100%;
+  height: 75%;
+  padding: 5px;
+}
+
+.newsHeader {
+  margin: 10px;
+  font-weight: bold;
+}
+
+.newsText {
+  margin: 10px;
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.moreNewsBtn {
+  background-color: white;
+  color: black;
+  border: none;
+  width: 25%;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Times New Roman', Times, serif;
+  display: inline-block;
+  font-size: 22px;
+}
+
+.spaceTop2 {
+  padding-top: 50px;
+}
+
+@media screen and (max-width: 500px) {
+  .NewsImagesResponsive {
+    width: 100%;
+    padding-top: 5px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .moreNewsBtnResponsive {
+    width: 100%;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .newsTextResponsive {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 17px;
+    border-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .newsHeaderResponsive {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+  }
+}
+
+/* -------------------Social Feed-------------------- */
 
 
 
@@ -46,4 +157,16 @@ body {
 
 
 
-
+.viewMoreBtn {
+  background-color: #e7e7e7;
+  color: black;
+  border: none;
+  width: 25%;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Times New Roman', Times, serif;
+  display: inline-block;
+  font-size: 22px;
+}
